tests/suite/fail/generated/borrow/fail_move_use_text.ny
fn use(x: string) -> void { print(x) }
fn main() {
    let text = "hello"
    use(text)
    print(text) //~ ERROR was moved
}
